fixes #4 #8 #14
