# ansible-adaptor/swagger_server/controllers/ans_kafka.py
@@ -9,6 +9,7 @@ from flask import current_app as app
 from kafka import KafkaProducer
 from .ans_driver_config import ConfigReader
 
+
 class Kafka:
     """
     implements the kafka client
@@ -23,20 +24,20 @@ class Kafka:
         self.config = ConfigReader()
         self.kafkaUrl = self.config.getDriverProperties('responseKafkaConnectionUrl')
         self.kafkaTopic = self.config.getDriverProperties('responseKafkaTopicName')
-        self.logger.debug('Trying to setup kafka producer on: '+self.kafkaUrl+', topic: '+ self.kafkaTopic)
+        self.logger.debug('Trying to setup kafka producer on: '+self.kafkaUrl+', topic: ' + self.kafkaTopic)
 
         try:
-            self.kproducer = KafkaProducer(bootstrap_servers=self.kafkaUrl,value_serializer=lambda m: json.dumps(m).encode('ascii'),api_version=(0,10) )
+            self.kproducer = KafkaProducer(bootstrap_servers=self.kafkaUrl, value_serializer=lambda m: json.dumps(m).encode('ascii'), api_version=(0, 10))
+            self.logger.info('kafka producer is up')
         except Exception as e:
-            self.logger.error('could not connect to kafka server at '+self.kafkaUrl+' no messages will be published')
+            self.logger.error('could not connect to kafka server at ' + self.kafkaUrl+' no messages will be published')
             self.producer = None
-
 
     def sendLifecycleEvent(self, msg):
         self.logger.debug('sending message to kafka '+str(msg))
 
-		# if have a valid producer then send a kafka message, otherwise do nothin
-        if self.kproducer != None:
+        # if have a valid producer then send a kafka message, otherwise do nothin
+        if self.kproducer is not None:
             self.logger.debug('have valid producer')
             self.logger.debug("sending transition event to Kafka topic "+self.kafkaTopic)
 
@@ -46,7 +47,7 @@ class Kafka:
                 record_metadata = future.get(timeout=10)
                 self.logger.debug('msg metadata: '+str(record_metadata))
             except KafkaError:
-                #log.exception()
+                # log.exception()
                 pass
         else:
             self.logger.debug('no valid kafka producer found')
