# ansible-adaptor/swagger_server/models/__init__.py
@@ -3,17 +3,15 @@
 from __future__ import absolute_import
 # import models into model package
 from .deployment_location import DeploymentLocation
-from .deployment_location_request import DeploymentLocationRequest
 from .inline_response200 import InlineResponse200
 from .inline_response2001 import InlineResponse2001
 from .inline_response2002 import InlineResponse2002
 from .inline_response2003 import InlineResponse2003
 from .inline_response2004 import InlineResponse2004
-from .inline_response2005 import InlineResponse2005
 from .inline_response200_properties import InlineResponse200Properties
 from .inline_response200_supported_features import InlineResponse200SupportedFeatures
 from .inline_response201 import InlineResponse201
-from .inline_response2011 import InlineResponse2011
-from .inline_response2011_context import InlineResponse2011Context
+from .inline_response202 import InlineResponse202
+from .inline_response202_context import InlineResponse202Context
 from .topologydeploymentlocationsnameinstances_properties import TopologydeploymentlocationsnameinstancesProperties
 from .transition_request import TransitionRequest
